Update lazy image

--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="feature__content">
           <div class="feature__row view-row">
             <div class="feature__img">
-              <img class="js-lazy-img" src="./img/features/feature-1-small.webp"
+              <img class="" src="./img/features/feature-1-small.webp"
                 data-src="./img/features/feature-1.webp" alt="Feature 1">
             </div>
             <div class="faeture__description">
@@ -301,7 +301,7 @@
           </div>
           <div class="feature__row view-row">
             <div class="feature__img">
-              <img class="js-lazy-img" src="./img/features/feature-2-small.webp"
+              <img class="" src="./img/features/feature-2-small.webp"
                 data-src="./img/features/feature-2.webp" alt="Feature 2">
             </div>
             <div class="faeture__description">
@@ -318,7 +318,7 @@
           </div>
           <div class="feature__row view-row">
             <div class="feature__img">
-              <img class="js-lazy-img" src="./img/features/feature-3-small.webp"
+              <img class="" src="./img/features/feature-3-small.webp"
                 data-src="./img/features/feature-3.webp" alt="Feature 3">
             </div>
             <div class="faeture__description">
