Update content in System section

--- a/index.html
+++ b/index.html
@@ -1100,14 +1100,13 @@
             </div>
             <div class="system__details system__details--recommended">
               <ul class="system-section__list">
-                <li class="system-section__item">OS: Windows 10</li>
+                <li class="system-section__item">OS: Windows 11/10</li>
                 <li class="system-section__item">
-                  Processor: Intel Core i5-8400 | AMD RYZEN 3 3300X
+                  Processor: Intel Core i7-8700K | AMD Ryzen 5 3600X
                 </li>
-                <li class="system-section__item">Memory: 12 GB RAM</li>
+                <li class="system-section__item">Memory: 16 GB RAM</li>
                 <li class="system-section__item">
-                  Graphics: Nvidia GeForce GTX 1060, 3 GB | AMD Radeon RX 580,
-                  4 GB
+                  Graphics: Nvidia GeForce GTX 1070, 8 GB | AMD Radeon RX VEGA 56, 8 GB
                 </li>
                 <li class="system-section__item">
                   DirectX: Version 12 (Feature Level 12.0)
